# OpenGL

./: .gitignore  CMakeLists.txt  CMakeLists_reference.txt  build.bat  create_imgui_cmake.sh  shader_006.h  tutorial_001.cpp  tutorial_001_triangle.cpp  tutorial_005_shaders.cpp  tutorial_006_shaders.cpp  tutorial_007_shaders_sea.cpp  tutorial_008_shaders_rainforest.cpp  tutorial_009_shaders_rippleCam.cpp  tutorial_010_shaders_hand_drawn.cpp  tutorial_010_shaders_multiple_3d_shapes.cpp  tutorial_011_shaders_happy_jumping.cpp  tutorial_012_shaders_using_mouse.cpp  tutorial_013_shaders_ray_tracing_two_spheres_and_walls.cpp  tutorial_014_textures1.cpp
EmguCV/: generate-files.sh  generate-files1.sh  generate-files2.sh
EmguCV/AutoGen/: EOSimU.API.AutoGen.sln
EmguCV/ClientAndServer/: client_and_server_generate-files.sh  client_generate-files.sh
EmguCV/ClientAndServer/Server_csharp/: CMakeLists.txt  server_generate-files.sh
EmguCV/ClientAndServer/Server_csharp/src/: CMakeLists.txt
EmguCV/ClientAndServer/Server_csharp/src/PluginEosimImp/: CMakeLists.txt  PolygonsLosImplementation.cs  PolygonsLosModuleImplementation.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/: CMakeLists.txt
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/Adaptors/: PolygonsLosAdaptor.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/AutoGen/Adaptors/: PolygonsLosAdaptor.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/AutoGen/Models/: Pixel.cs  Point.cs  Polygon2D.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/AutoGen/Modules/: PolygonsLosModule.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/AutoGen/Utils/: BaseServer.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/ServerUtils/: BaseServer.cs  RegisterSupport.cs
EmguCV/ClientAndServer/Server_csharp/src/PluginProtocolSwagger/Swagger/: SwaggerSupport.cs
EmguCV/ClientAndServer/Server_csharp/src/ProtocolPluginLoader/: CMakeLists.txt  ProtocolPluginLoader.cs
EmguCV/ClientAndServer/Server_csharp/src/ServerApp/: CMakeLists.txt
EmguCV/EosimSDKServer/: EosimSDKServer.sln
EmguCV/EosimSDKServerCMake/: CMakeLists.txt
EmguCV/EosimSDKServerCMake/PluginEosimImp/: PolygonsLosModuleImplementation.cs
EmguCV/EosimSDKServerCMake/PluginProtocolSwagger/AutoGen/Adaptors/: PolygonsLosAdaptor.cs
EmguCV/EosimSDKServerCMake/PluginProtocolSwagger/AutoGen/Utils/: BaseServer.cs  RegisterSupport.cs
EmguCV/EosimSDKServerCMake/ProtocolPluginLoader/: IProtocolPlugin.cs  ProtocolPluginLoader.cs  SwaggerProtocolPlugin.cs
EmguCV/EosimSDKServerCMake/ServerApp/: Program.cs
EmguCV/EosimSDKServerCMake/src/PluginProtocolSwagger/AutoGen/Models/: Point.cs
EmguCV/EosimSDKServerCMake/src/PluginProtocolSwagger/AutoGen/Swagger/: SwaggerSupport.cs
EmguCV/EosimSDKServerCMake/src/PluginProtocolSwagger/AutoGen/Utils/: LocalDateConverter.cs  Parameters.cs
EmguCV/EosimSDKServerCMake/src/ProtocolPluginLoader/: SwaggerProtocolPlugin.cs
EmguCV/EosimSDKServerCMake/src/ServerApp/: Program.cs
EmguCV/spec/: hello_world.yaml  los_polygons.spec  petstore_small.yaml  simulation.spec  swagger_points.yaml
EmguCV/tutorial1/: tutorial1.sln
LOS/: CMakeLists.txt
LearnOpenGL/: CMakeLists.txt
LearnOpenGL/helloWorld/: hello.cpp  helloWorld.cpp
Shaders/: clouds.fs  hand_drawn.fs  happy_jumping.fs  rippleCam.fs  sea.fs  using_mouse.fs
clean_configuration/: Object.h  build.sh  main  main.cpp  main3.cpp
clean_configuration_cmake/: CMakeLists.txt  imgui.ini  main.cpp  main_noam.cpp  script_build.sh
clean_configuration_cmake/include/: Camera.h  CircleMesh.h  MathUseful.h  MatrixDebugger.h  Mesh.h  ModelParameters.h  Object.h  OpenGLErrors.h  Plane.h  Ray.h  RayMesh.h  Triangle.h
clean_configuration_cmake/matlab/: script_triangulate_2d_circle.m
clean_configuration_cmake/src/: MathUseful.cpp  Ray.cpp  main.cpp
clean_configuration_cmake1/: CMakeLists.txt  script_build.sh
clean_configuration_cmake1/include/: Camera.h  CircleMesh.h  CircleModel.h  ImGuiWrapper.h  MathUseful.h  Model.h  ModelParameters.h  Model_GLTF.h  OpenGLErrors.h  Polygons.h  shaderClass.h
clean_configuration_cmake1/matlab/: script_calc_polygons_from_image.m  script_triangulate_2d_circle.m
clean_configuration_cmake1/src/: Camera.cpp  CircleModel.cpp  ImGuiWrapper.cpp  Main.cpp  MathUseful.cpp  Mesh.cpp  Model.cpp  Model_GLTF.cpp  OpenGLErrors.cpp  Polygons.cpp  shaderClass.cpp
gl_shaded_gltfscene/Sources/: GLTFSceneApp.cpp  main.cpp
matlab/: RotMat2Euler.m  calc_lookat.m  calc_lookat_glm.m  get_rotation_x_in_opengl.m  get_rotation_y_in_opengl.m  get_rotation_z_in_opengl.m  script_check_angles.m
resources/shaders/: clouds.frag  multiple_3d_shapes.fs  rainforest.fs  ray_tracing_two_spheres_and_walls.frag
src/: CMakeLists.txt
src/tutorial_002_rectangle/: CMakeLists.txt  tutorial_002_rectangle.cpp
src/tutorial_003_shaders/: tutorial_003_shaders.cpp
src/tutorial_004_shaders/: CMakeLists.txt  tutorial_004_shaders.cpp
src/tutorial_005_shaders/: CMakeLists.txt  tutorial_005_shaders.cpp
src/tutorial_006_shaders/: CMakeLists.txt  tutorial_006_shaders.cpp
src/tutorial_007_shaders_sea/: CMakeLists.txt  tutorial_007_shaders_sea.cpp
src/tutorial_007_shadertoy_sea/: CMakeLists.txt  tutorial_007_shaders_sea.cpp
src/tutorial_008_shaders_rainforest/: CMakeLists.txt  tutorial_008_shaders_rainforest.cpp
src/tutorial_009_shaders_rippleCam/: CMakeLists.txt  tutorial_009_shaders_rippleCam.cpp
src/tutorial_009_shadertoy_rippleCam/: tutorial_009_shaders_rippleCam.cpp
src/tutorial_010_shaders_multiple_3d_shapes/: CMakeLists.txt  tutorial_010_shaders_multiple_3d_shapes.cpp
src/tutorial_010_shadertoy_multiple_3d_shapes/: CMakeLists.txt
src/tutorial_011_shaders_happy_jumping/: CMakeLists.txt  tutorial_011_shaders_happy_jumping.cpp
src/tutorial_011_shadertoy_happy_jumping/: CMakeLists.txt  tutorial_011_shaders_happy_jumping.cpp
src/tutorial_012_shaders_using_mouse/: CMakeLists.txt  tutorial_012_shaders_using_mouse.cpp
src/tutorial_014_textures1/: CMakeLists.txt  (+1 more)
(+112 files in other folders)
