cmake_minimum_required(VERSION 3.8.2)

project(EosimSdkServerSolution VERSION 1.0.0 LANGUAGES CSharp)

include(CSharpUtilities)

set(BINARY_DIR_OUTPUT ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR_OUTPUT})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_DIR_OUTPUT})

message(STATUS "CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")

set(CMAKE_DOTNET_TARGET_FRAMEWORK_VERSION "v4.6.1")

add_subdirectory("src")